a1/brendan_gordon/TEST_PROGRAMS/invalidtype/yanis_hattab/invalid4.min
#using a string as a while condition type error


var x : int;
var y : float;
var s : string;

s = "error";

while (s) do
	y = 23.5;
done


